Fix height of BG_video on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -235,7 +235,7 @@ a:hover, #indexhamburger:hover{
 	top: 0;
 	left: 0;
 	min-height: 100%;
-	max-height: 120%;
+	max-height: 122%;
 	}
 
 #desktop_bg_video {
